--- a/02-Advanced-CSS/01-Activities/10-Stu_Box-Styling/Unsolved/assets/css/style.css
+++ b/02-Advanced-CSS/01-Activities/10-Stu_Box-Styling/Unsolved/assets/css/style.css
@@ -70,10 +70,15 @@ footer {
   padding: 10px;
   margin: 20px;
   flex: 0 0 300px;
+  border-radius: 50px;
+  transform: rotate(7deg);
+  box-shadow: 5px 5px grey;
 }
 
 .card header {
   padding: 20px;
+  border-top-right-radius: 50px;
+  border-top-left-radius: 50px;
 }
 
 .card p {
