--- a/02-Advanced-CSS/01-Activities/14-Stu_Typography/Unsolved/assets/css/style.css
+++ b/02-Advanced-CSS/01-Activities/14-Stu_Typography/Unsolved/assets/css/style.css
@@ -2,6 +2,7 @@
 body {
   display: flex;
   flex-direction: column;
+  font-size: 16px;
 }
 
 header {
@@ -15,20 +16,30 @@ header {
 
 /* TODO: Change the heading size to 200%, give it a margin all around, and assign font family to serif */
 h1 {
+  font-family: serif;
+  font-size: 200%;
+  margin: 5%;
 }
 
 /* TODO: Change the heading size to be slightly smaller than h1, give it a margin only on the top and bottom, and assign font family to serif */
 h2 {
+  font-family: serif;
+  font-size: 175%;
+  margin: 4% 0;
 }
 
 /* TODO: Change header size to be slightly smaller than h2 and assign font family to serif */
 h3 {
+  font-family: serif;
+  font-size: 150%;
+  margin: 5%;
 }
 
 nav ul {
   display: flex;
   justify-content: space-between;
   min-width: 300px;
+  margin: 2%;
 }
 
 nav a {
@@ -47,6 +58,7 @@ main {
 section {
   flex: 1 1 0;
   padding-right: 5%;
+  margin-left: 2%;
 }
 
 article {
@@ -55,10 +67,15 @@ article {
 
 /* TODO: Add a margin to the top and bottom of the paragraphs */
 article p {
+  line-height: 1.5;
+  margin: 2% 0;
 }
 
 /* TODO: Add a margin to indent the list, give it square bullet points, and assign font family to monospace */
 article ul {
+  list-style: square;
+  margin-left: 5%;
+  font-family: monospace;
 }
 
 aside {
