class work along with the start of a mini project 29

--- a/02-Advanced-CSS/01-Activities/16-Stu_Pseudo-Classes/Unsolved/assets/css/style.css
+++ b/02-Advanced-CSS/01-Activities/16-Stu_Pseudo-Classes/Unsolved/assets/css/style.css
@@ -89,6 +89,17 @@ footer {
 
 /* TODO: Add styles to display and hide the resource links */
 
+.Links {
+  display: none;
+}
+
+.resources:hover .Links {
+  display: block;
+
+}
+
+
+
 @media screen and (max-width: 768px) {
   header, main {
     flex-direction: column;
