updating class folder

--- a/06-Server-Side-APIs/01-Activities/22-Stu_Mini-Project/assets/css/style.css
+++ b/06-Server-Side-APIs/01-Activities/22-Stu_Mini-Project/assets/css/style.css
@@ -1,5 +1,5 @@
 body {
-  font-family: 'Fira Sans', sans-serif;
+  font-family: "Fira Sans", sans-serif;
 }
 
 h1,
@@ -8,6 +8,14 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: 'Merriweather', serif;
+  font-family: "Merriweather", serif;
   font-weight: 700;
+}
+
+.hide {
+  display: none;
+}
+
+.show {
+  display: block;
 }
